# walker

./: arm.py  bone.py  foot.py  foot_balls.py  foot_function.py  foot_revolute.py  joint.py  leg.py  nema.py  notes.md  passive_joint.py  quadruped.py  quadruped_asymetric.py  quadruped_carrier.py  quadruped_oblique.py  quadruped_runner.py  schemes.drawio  sensors.py  utils.py  walk.py
compound-planetary/: compound-planetary-gearbox.drawio  functions.py  grouping.py  script.py
control-software/: Cargo.toml
control-software/src/: main.rs  registers.rs
elliptic-gearbox/: double-crown.py
gearbox/: strainwave.py
gearbox/compound-planetary/: caching.py  class.py  compound-planetary-gearbox.md  dimension-cvxpy.py  dimension-gekko.py  fake.py  script-d30.py  some.py  struct.py
joint-software/: Cargo.toml  espflash.toml
joint-software/.cargo/: config.toml
joint-software/registers/: Cargo.toml
joint-software/registers/src/: lib.rs
joint-software/src/: artcat.rs  as5600.rs  drivers.rs  foc.rs  i2c.rs  ina181.rs  main.rs  mks.rs  mutex.rs  prelude.rs  registers.rs  tcs3472.rs  utils.rs
