[package]
edition      = "2021"
name         = "joint"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "main"
path = "./src/main.rs"

[dependencies]
embedded-hal = "1.0"
bilge = "0.3.0"
# nalgebra = "0.33.2"
log = "0.4"

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }
esp-println            = { version = "0.14.0", features = ["esp32c3", "log-04"] }
critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
