[package]
name         = "joint"
version      = "0.1.0"
rust-version = "1.86"
edition      = "2021"

[[bin]]
name = "main"
path = "./src/main.rs"

[dependencies]
log = "0.4"
nb = "1.1"
bilge = "0.3"
packbytes = { version="0.2", features = ['packbytes-derive'], default-features=false }
vecmat = { version="0.7", default-features=false }
num-traits = { version="0.2", features = ['libm'], default-features=false }
futures-concurrency = { version = "7.6", default-features=false }
embedded-hal-async = "1.0"
embedded-io-async = "0.7"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-hal                = { version = "1.0.0", features = ["esp32", "log-04", "unstable"] }
esp-backtrace          = { version = "0.18", features = ["esp32", "println", "colors", "panic-handler"]}
# esp-hal-embassy        = { version = "0.9.1", features = ["esp32", "executors", "log-04"] }
esp-rtos = { version = "0.2", features = ["esp32", "log-04", "embassy"] }
esp-println            = { version = "0.16", features = ["esp32", "log-04"] }
esp-alloc              = { version = "0.9", features = ["esp32"] }
critical-section = "1.2"
embassy-executor = "0.9"
embassy-time = "0.5.0"

# artcat = { version = "0.1", features = ["slave"], path = "../artcat" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

